--- a/puntoDeVentaV2/puntoDeVenta.css
+++ b/puntoDeVentaV2/puntoDeVenta.css
@@ -3,44 +3,104 @@ body{
     background-size: cover;
 }
 .principal{
-    background-color: crimson;
+    background-color: rgba(0, 0, 0, 0.671);
     padding-top: 30px;
     padding-bottom: 30px;
     padding-left: 40px;
     padding-right: 40px;
+    display: flex;
+    justify-content: center;
+    border-radius: 10px;
 }
 .contenedor2{
-    background-color: darkorange;
+    background-color: aliceblue;
     display: flex;
+    flex-direction: row;
     justify-content: center;
+    padding: 20px;
+    border-radius: 10px;
 }
-
 .partLogo{
-    background-color: aqua;
-    padding: 10px;
+    padding: 30px;
 }
     .logo{
-        width: 300px;
+        width: 250px;
     }
 .partDatos{
-    background-color: blue;
+    background-color: rgb(198, 243, 249);
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 10px;
+    padding: 30px;
     font-family: Arial, Helvetica, sans-serif;
+    border-radius: 10px;
 }
+    .ingresoDatos{
+        display: flex;
+        flex: row;
+        justify-content: center;
+        padding-bottom: 10px;
+    }
     .titulo{
         font-size: 20px;
+        align-self: center;
+        margin-bottom: 20px;
     }
     .tituloCaja{
-        color: aliceblue;
+        color: black;
+        padding-right: 10px;
+        flex: 1;
     }
-
+    .contenidoCaja{
+        flex: 1;
+    }
+    .inputDatos{
+        border: 1px solid rgb(38, 134, 145);
+        border-radius: 3px;
+    }
+    .error{
+        color: rgb(215, 11, 11);
+        font-size: 10px;
+        font-style: oblique;
+        font-weight: bold;
+    }
+    .botones{
+        display: flex;
+    }
+    .boton{
+        margin: 3px;
+        padding: 15px;
+        flex: 1;
+        background-color: rgb(8, 128, 161);
+        color: rgb(255, 255, 255);
+        border: 0;
+        border-radius: 5px;
+    }
+    .boton:hover{
+        background-color: rgb(8, 112, 141);
+    }
+    .boton:active{
+        background-color: rgb(4, 47, 78);
+    }
 .partResultado{
-    background-color: blueviolet;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 10px;
+    padding: 30px;
+    font-family: Arial, Helvetica, sans-serif;
 }
+    .datosMostrados{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        padding-bottom: 10px;
+    }
+    .tituloResultado{
+        padding-right: 10px;
+        flex: 4;
+    }
+    .numeroResultado{
+        padding-left: 10px;
+        flex: 1;
+
+    }
