--- a/placas/placas.css
+++ b/placas/placas.css
@@ -57,6 +57,29 @@ body{
     text-align: center;
     color: crimson;
 }
+.datos{
+    padding-top: 5px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.contenedorDatos{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    font-size: 14px;
+    padding: 4px;
+}
+.nombreDato{
+    font-weight: bold;
+
+}
+.resultadoDato{
+    margin-left: 30px;
+}
+
+
+/*BOTON*/
 .botonera{
 padding-top: 20px;
 }
