--- a/roles/roles.css
+++ b/roles/roles.css
@@ -79,26 +79,35 @@ body{
     justify-content: center;
 }
 tbody tr:nth-child(odd) {
-    background-color: #908efc;
+    background-color: #f3f3f3;
   }
   
   tbody tr:nth-child(even) {
-    background-color: #6a51cf;
+    background-color: #f3f3f3;
   }
   
   tbody tr {
     background-image: url(noise.png);
   }
-  
+
   table {
-    background-color: #0b0c0c;
     width: 100%;
   }
   td{
     text-align: center;
+
   }
   .areaTabla{
     margin-top: 20px;
+
+  }
+  .tblTitulos{
+    background-color: #226f9f;
+    border-radius: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    color: #ffffff;
+    border: 0;
   }
 .estiloBoton:hover {
     background-color:white; 
