--- a/roles/roles.css
+++ b/roles/roles.css
@@ -109,6 +109,19 @@ tbody tr:nth-child(odd) {
     color: #ffffff;
     border: 0;
   }
+  .tblTitulos2{
+    background-color: #226f9f;
+    border-radius: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 13px;
+    color: #ffffff;
+    border: 0;
+    padding: 5px;
+  }
+  .tblCeldas{
+    padding-left: 10px;
+    padding-right: 10px;
+  }
 .estiloBoton:hover {
     background-color:white; 
     color: #217023;
