Se modificó el menú de opciones y se cambió el slider principal

--- a/krakedevpage/css/style.css
+++ b/krakedevpage/css/style.css
@@ -2391,13 +2391,13 @@ fieldset:disabled a.btn {
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
 .show > .btn-primary.dropdown-toggle {
   color: #212529;
-  background-color: #f67a62;
-  border-color: #f67056;
+  background-color: rgb(255,0,0,0.6);
+  border-color: rgb(255,0,0);
 }
 
 .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus,
 .show > .btn-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(217, 144, 130, 0.5);
+  box-shadow: 0 0 0 0.2rem rgb(255,0,0,0.4);
 }
 
 .btn-secondary {
