--- a/krakedevpage/css/style.css
+++ b/krakedevpage/css/style.css
@@ -364,7 +364,7 @@ h1, h2, h3, h4, h5, h6,
   margin-bottom: 0.5rem;
   font-weight: 500;
   line-height: 1.2;
-  color: #211E1C;
+  color: #6b6b6b;
 }
 
 h1, .h1 {
@@ -9264,7 +9264,7 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #757575 !important;
+  color: rgb(220, 220, 220) !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
