--- a/REPASO FINAL/evaluacionIndividual/orden.css
+++ b/REPASO FINAL/evaluacionIndividual/orden.css
@@ -3,7 +3,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 .contenedorBajo{
-    background-color: blue;
+    background-color: rgb(210, 210, 210);
     padding: 20px;
     display: flex;
     justify-content: center;
@@ -18,7 +18,9 @@ body{
     justify-content: center;
     align-items: center;
 }
-
+table tr{
+    padding: 10px;
+}
 .titulo{
     font-size: 30px;
     font-weight: 700;
@@ -39,9 +41,10 @@ body{
 }
 .contenidoDatos{
     padding-top: 10px;
+    margin-bottom: 12px;
     display: flex;
     justify-content: center;
-    background-color: rgba(80, 216, 239, 0.149);
+    background-color: rgba(189, 202, 205, 0.149);
     border-radius: 10px;
 
 }
@@ -55,6 +58,7 @@ body{
 
 .tablaPrincipal{
     margin-top: 10px;
+    margin-bottom: 15px;
     text-align: center;
     
 }
@@ -64,8 +68,38 @@ body{
     height: 40px;
     border: 0;
     background-color: rgb(19, 77, 109);
-    border-radius: 5px;
-    margin-top: 10px;
+    border-radius: 5px;;
     color: white;
     font-weight: 600;
+}
+.botonPrincipal:hover{
+    background-color: rgb(14, 58, 81);
+}
+.botonPrincipal:active{
+    background-color: rgb(17, 117, 171);
+}
+
+.boxMayorMenor{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.PersonasMayorMenor{
+    background-color: rgb(233, 233, 233);
+    width: 260px;
+    margin-left: 10px;
+    margin-right: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    border-radius: 7px;
+}
+
+.textoCaja{
+    padding-top: 10px;
+    width: 250px;
+
 }
